# local-type-alias

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: ast.rs  lib.rs  substitute.rs
tests/: Cargo.toml
tests/tests/: main.rs
