[package]
name = "local-type-alias"
version = "0.1.3"
edition = "2021"
description = "Local type aliases in impl blocks"
license = "MIT"
documentation = "https://docs.rs/local-type-alias"
repository = "https://github.com/Spartan2909/local-type-alias"
categories = ["rust-patterns"]
keywords = ["type", "alias", "impl"]
rust-version = "1.56"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["extra-traits", "full"] }

[lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

missing_inline_in_public_items = "warn"
module_name_repetitions = "allow"
redundant_else = "allow"
redundant_pub_crate = "allow"
use_self = "allow"

[workspace]
members = ["tests"]
